--- a/photographer.html
+++ b/photographer.html
@@ -30,7 +30,7 @@
       <div class="photograph-header">
         <button class="contact_button" onclick="displayModal()">Contactez-moi</button>
       </div>
-      <section id="photographer-photos">
+      <section id="photographer-photos" class="mediaDisplay">
       </section>
     </main>
     <div id="contact_modal">
