--- a/photographer.html
+++ b/photographer.html
@@ -13,9 +13,9 @@
     </header>
     <main id="main">
       <div class="photographer_info">
-        <!--Info écrite-->
+        <img id="photographeImage" src="" alt="Photo de profil du photographe" />
         <div class="photograph-info">
-          <img id="photographeImage" src="" alt="Photo de profil du photographe" />
+      
           <h1 id="photographeName">Nom photographe</h1>
           <p id="photographeLocalisation">Localisation</p>
           <p id="photographeSlogan">slogan</p>
@@ -37,14 +37,20 @@
 			<div class="modal">
 				<header>
           <h2>Contactez-moi</h2>
-          <img src="assets/icons/close.svg" onclick="closeModal()" />
+          <img src="assets/icons/close.svg" onclick="displayModal()" />
         </header>
 				<form>
 					<div>
 						<label>Prénom</label>
 						<input />
+            <label>Nom</label>
+            <input>
+            <label>Email</label>
+            <input>
+            <label>Votre message</label>
+            <input class="message">
 					</div>
-          <button class="contact_button">Envoyer</button>
+          <button class="contact_button" type="submit" >Envoyer</button>
 				</form>
 			</div>
 		</div>
